--- a/dev/index.html
+++ b/dev/index.html
@@ -14,12 +14,11 @@ Pkg.add(&quot;StructuralIdentifiability&quot;)</code></pre><h2 id="Citation"><a 
   number  = {1},
   pages   = {194-235}
 }</code></pre><h2 id="Feature-Summary"><a class="docs-heading-anchor" href="#Feature-Summary">Feature Summary</a><a id="Feature-Summary-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-Summary" title="Permalink"></a></h2><p><code>StructuralIdentifiability.jl</code> can assess local and global identifiability of ODE models. In addition to these straightforward identifiability queries on individual parameters, the package can distinguish between single- and multi-experiment identifiability.</p><h2 id="Feature-List"><a class="docs-heading-anchor" href="#Feature-List">Feature List</a><a id="Feature-List-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-List" title="Permalink"></a></h2><ul><li>Local identifiability checks</li><li>Global identifiability checks</li><li>Assessment of identifiable functions of parameters and states</li><li>Model reparametrization (experimental)</li></ul><h2 id="Contributing"><a class="docs-heading-anchor" href="#Contributing">Contributing</a><a id="Contributing-1"></a><a class="docs-heading-anchor-permalink" href="#Contributing" title="Permalink"></a></h2><ul><li><p>Please refer to the <a href="https://github.com/SciML/ColPrac/blob/master/README.md">SciML ColPrac: Contributor&#39;s Guide on Collaborative Practices for Community Packages</a> for guidance on PRs, issues, and other matters relating to contributing to StructuralIdentifiability.</p></li><li><p>There are a few community forums:</p><ul><li>The #diffeq-bridged channel in the <a href="https://julialang.org/slack/">Julia Slack</a></li><li><a href="https://gitter.im/JuliaDiffEq/Lobby">JuliaDiffEq</a> on Gitter</li><li>On the Julia Discourse forums</li><li>See also <a href="https://sciml.ai/community/">SciML Community page</a></li></ul></li></ul><h2 id="Reproducibility"><a class="docs-heading-anchor" href="#Reproducibility">Reproducibility</a><a id="Reproducibility-1"></a><a class="docs-heading-anchor-permalink" href="#Reproducibility" title="Permalink"></a></h2><details><summary>The documentation of this SciML package was built using these direct dependencies,</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl/docs/Project.toml`
-  [6e4b80f9] BenchmarkTools v1.4.0
-  [e30172f5] Documenter v1.2.1
-⌅ [961ee093] ModelingToolkit v8.75.0
-  [220ca800] StructuralIdentifiability v0.5.4 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`
-Info Packages marked with ⌅ have new versions available but compatibility constraints restrict them from upgrading. To see why use `status --outdated`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.10.1
-Commit 7790d6f0641 (2024-02-13 20:41 UTC)
+  [6e4b80f9] BenchmarkTools v1.5.0
+  [e30172f5] Documenter v1.3.0
+  [961ee093] ModelingToolkit v9.4.0
+  [220ca800] StructuralIdentifiability v0.5.4 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.10.2
+Commit bd47eca2c8a (2024-03-01 10:14 UTC)
 Build Info:
   Official https://julialang.org/ release
 Platform Info:
@@ -33,63 +32,65 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [a4c015fc] ANSIColoredPrinters v0.0.1
   [c3fe647b] AbstractAlgebra v0.40.1
   [1520ce14] AbstractTrees v0.4.5
-  [79e6a3ab] Adapt v4.0.1
+  [79e6a3ab] Adapt v4.0.3
 ⌅ [ec485272] ArnoldiMethod v0.2.0
-  [4fba245c] ArrayInterface v7.7.1
-  [4c555306] ArrayLayouts v1.6.0
+  [4fba245c] ArrayInterface v7.8.1
+  [4c555306] ArrayLayouts v1.6.1
   [a9b6321e] Atomix v0.1.0
-  [6e4b80f9] BenchmarkTools v1.4.0
+  [6e4b80f9] BenchmarkTools v1.5.0
   [e2ed5e7c] Bijections v0.1.6
   [62783981] BitTwiddlingConvenienceFunctions v0.1.5
   [2a0fbf3d] CPUSummary v0.2.4
-  [00ebfdb7] CSTParser v3.4.1
+  [00ebfdb7] CSTParser v3.4.2
   [49dc2e85] Calculus v0.5.1
-  [d360d2e6] ChainRulesCore v1.22.1
+  [d360d2e6] ChainRulesCore v1.23.0
   [fb6a15b2] CloseOpenIntervals v0.1.12
+  [944b1d66] CodecZlib v0.7.4
   [861a8166] Combinatorics v1.0.2
   [a80b9123] CommonMark v0.8.12
   [38540f10] CommonSolve v0.2.4
   [bbf7d656] CommonSubexpressions v0.3.0
-  [34da2185] Compat v4.13.0
+  [34da2185] Compat v4.14.0
   [b152e2b5] CompositeTypes v0.1.3
   [2569d6c7] ConcreteStructs v0.2.3
   [187b0558] ConstructionBase v1.5.4
   [adafc99b] CpuId v0.3.1
   [a8cc5b0e] Crayons v4.1.1
   [9a962f9c] DataAPI v1.16.0
-  [864edb3b] DataStructures v0.18.17
+  [864edb3b] DataStructures v0.18.18
   [e2d170a0] DataValueInterfaces v1.0.0
-  [2b5f629d] DiffEqBase v6.147.0
-⌅ [459566f4] DiffEqCallbacks v2.37.0
+  [2b5f629d] DiffEqBase v6.148.0
+  [459566f4] DiffEqCallbacks v3.3.0
   [163ba53b] DiffResults v1.1.0
   [b552c78f] DiffRules v1.15.1
-  [b4f34e82] Distances v0.10.11
   [31c24e10] Distributions v0.25.107
   [ffbed154] DocStringExtensions v0.9.3
-  [e30172f5] Documenter v1.2.1
-⌅ [5b8099bc] DomainSets v0.6.7
+  [e30172f5] Documenter v1.3.0
+  [5b8099bc] DomainSets v0.7.9
   [fa6b7ba4] DualNumbers v0.6.8
   [7c1d4256] DynamicPolynomials v0.5.5
+  [06fc5a27] DynamicQuantities v0.12.3
   [4e289a0a] EnumX v1.0.4
-  [f151be2c] EnzymeCore v0.6.5
+⌃ [f151be2c] EnzymeCore v0.6.5
   [d4d017d3] ExponentialUtilities v1.26.1
   [e2ba6199] ExprTools v0.1.10
   [7034ab61] FastBroadcast v0.2.8
   [9aa1b823] FastClosures v0.3.2
-  [29a986be] FastLapackInterface v2.0.1
+  [29a986be] FastLapackInterface v2.0.2
   [1a297f60] FillArrays v1.9.3
+  [64ca27bc] FindFirstFunctions v1.2.0
   [6a86dc24] FiniteDiff v2.22.0
-  [59287772] Formatting v0.4.2
+  [1fa38f19] Format v1.3.6
   [f6369f11] ForwardDiff v0.10.36
   [069b7b12] FunctionWrappers v1.1.3
   [77dc65aa] FunctionWrappersWrappers v0.1.3
   [d9f16b24] Functors v0.4.7
   [46192b85] GPUArraysCore v0.1.6
   [c145ed77] GenericSchur v0.5.3
-  [d7ba0133] Git v1.3.0
+  [d7ba0133] Git v1.3.1
   [c27321d9] Glob v1.3.1
   [86223c79] Graphs v1.9.0
-  [0b43b601] Groebner v0.7.3
+  [0b43b601] Groebner v0.7.4
   [3e5b6fbb] HostCPUFeatures v0.1.16
   [34004b35] HypergeometricFunctions v0.3.23
   [b5f81e59] IOCapture v0.2.4
@@ -102,20 +103,19 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [82899510] IteratorInterfaceExtensions v1.0.0
   [692b3bcd] JLLWrappers v1.5.0
   [682c06a0] JSON v0.21.4
-  [98e50ef6] JuliaFormatter v1.0.50
+  [98e50ef6] JuliaFormatter v1.0.53
   [ccbc3e58] JumpProcesses v9.10.1
-  [ef3ab10e] KLU v0.5.0
+  [ef3ab10e] KLU v0.6.0
   [ba0b0d4f] Krylov v0.9.5
   [b964fa9f] LaTeXStrings v1.3.1
   [2ee39098] LabelledArrays v1.15.1
   [984bce1d] LambertW v0.4.6
-  [23fbe1c1] Latexify v0.16.1
+  [23fbe1c1] Latexify v0.16.2
   [10f19ff3] LayoutPointers v0.1.15
   [0e77f7df] LazilyInitializedFields v1.2.2
-  [50d2b5c4] Lazy v0.15.1
   [5078a376] LazyArrays v1.8.3
   [d3d80556] LineSearches v7.2.0
-  [7ed4a6bd] LinearSolve v2.24.0
+  [7ed4a6bd] LinearSolve v2.27.0
   [2ab3a3ac] LogExpFunctions v0.3.27
   [bdcacae8] LoopVectorization v0.12.166
   [d8e11817] MLStyle v0.4.17
@@ -125,18 +125,17 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [a3b82374] MatrixFactorizations v2.1.0
   [bb5d69b7] MaybeInplace v0.1.1
   [e1d29d7a] Missings v1.1.0
-⌅ [961ee093] ModelingToolkit v8.75.0
+  [961ee093] ModelingToolkit v9.4.0
   [46d2c3a1] MuladdMacro v0.2.4
   [102ac46a] MultivariatePolynomials v0.5.4
   [d8a4904e] MutableArithmetics v1.4.1
   [d41bc354] NLSolversBase v7.8.3
-  [2774e3e8] NLsolve v4.5.1
   [77ba4419] NaNMath v1.0.2
-  [2edaba10] Nemo v0.43.0
-  [8913a72c] NonlinearSolve v3.7.2
+  [2edaba10] Nemo v0.43.1
+  [8913a72c] NonlinearSolve v3.8.0
   [6fe1bfb0] OffsetArrays v1.13.0
   [bac558e1] OrderedCollections v1.6.3
-  [1dea7af3] OrdinaryDiffEq v6.71.0
+  [1dea7af3] OrdinaryDiffEq v6.74.0
   [90014a1f] PDMats v0.11.31
   [65ce6f38] PackageExtensionCompat v1.0.2
   [3e851597] ParamPunPam v0.4.0
@@ -146,16 +145,16 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [f517fe37] Polyester v0.7.9
   [1d0040c9] PolyesterWeave v0.2.1
   [d236fae5] PreallocationTools v0.4.20
-  [aea7be01] PrecompileTools v1.2.0
-  [21216c6a] Preferences v1.4.1
+  [aea7be01] PrecompileTools v1.2.1
+  [21216c6a] Preferences v1.4.3
   [08abe8d2] PrettyTables v2.3.1
   [27ebfcd6] Primes v0.5.6
-  [92933f4c] ProgressMeter v1.9.0
+  [92933f4c] ProgressMeter v1.10.0
   [1fd47b50] QuadGK v2.9.4
   [fb686558] RandomExtensions v0.4.4
   [e6cf234a] RandomNumbers v1.5.3
   [3cdcf5f2] RecipesBase v1.3.4
-  [731186ca] RecursiveArrayTools v3.10.0
+  [731186ca] RecursiveArrayTools v3.11.0
   [f2c3362d] RecursiveFactorization v0.2.21
   [189a3867] Reexport v1.2.2
   [2792f1a3] RegistryInstances v0.1.0
@@ -164,8 +163,9 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [7e49a35a] RuntimeGeneratedFunctions v0.5.12
   [94e857df] SIMDTypes v0.1.0
   [476501e8] SLEEFPirates v0.6.42
-  [0bca4576] SciMLBase v2.26.2
-  [c0aeaf25] SciMLOperators v0.3.7
+  [0bca4576] SciMLBase v2.29.0
+  [c0aeaf25] SciMLOperators v0.3.8
+  [53ae85a6] SciMLStructures v1.1.0
   [efcf1570] Setfield v1.1.1
   [727e6d20] SimpleNonlinearSolve v1.5.0
   [699a6c99] SimpleTraits v0.9.4
@@ -184,14 +184,15 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [7792a7ef] StrideArraysCore v0.5.2
   [892a3eda] StringManipulation v0.3.4
   [220ca800] StructuralIdentifiability v0.5.4 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`
-  [2efcf032] SymbolicIndexingInterface v0.3.7
+  [2efcf032] SymbolicIndexingInterface v0.3.10
   [d1185830] SymbolicUtils v1.5.0
-  [0c5d862f] Symbolics v5.21.0
+  [0c5d862f] Symbolics v5.22.1
   [3783bdb8] TableTraits v1.0.1
   [bd369af6] Tables v1.11.1
   [8290d209] ThreadingUtilities v0.5.2
   [a759f4b9] TimerOutputs v0.5.23
   [0796e94c] Tokenize v0.5.28
+  [3bb67fe8] TranscodingStreams v0.10.4
   [d5829a12] TriangularSolve v0.1.20
   [410a4b4d] Tricks v0.1.8
   [781d530d] TruncatedStacktraces v1.4.0
@@ -207,7 +208,7 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [fcfa6d1b] Calcium_jll v0.401.100+0
   [2e619515] Expat_jll v2.5.0+0
 ⌅ [e134572f] FLINT_jll v200.900.9+0
-  [f8c6e375] Git_jll v2.43.0+0
+  [f8c6e375] Git_jll v2.44.0+1
   [1d5cc7b8] IntelOpenMP_jll v2024.0.2+0
   [94ce4f54] Libiconv_jll v1.17.0+0
   [856f044c] MKL_jll v2024.0.0+0
@@ -266,6 +267,6 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [8e850b90] libblastrampoline_jll v5.8.0+1
   [8e850ede] nghttp2_jll v1.52.0+1
   [3f19e933] p7zip_jll v17.4.0+2
-Info Packages marked with ⌅ have new versions available but compatibility constraints restrict them from upgrading. To see why use `status --outdated -m`</code></pre></details>You can also download the 
+Info Packages marked with ⌃ and ⌅ have new versions available. Those with ⌃ may be upgradable, but those with ⌅ are restricted by compatibility constraints from upgrading. To see why use `status --outdated -m`</code></pre></details>You can also download the 
 <a href="">manifest</a> file and the
-<a href="">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/creating_ode/">Creating ODE System »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="auto">Automatic (OS)</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.2.1 on <span class="colophon-date" title="Saturday 24 February 2024 10:52">Saturday 24 February 2024</span>. Using Julia version 1.10.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+<a href="">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/creating_ode/">Creating ODE System »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.3.0 on <span class="colophon-date" title="Sunday 10 March 2024 18:50">Sunday 10 March 2024</span>. Using Julia version 1.10.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
